--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,19 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
   </head>
 
   <body>
+    <div class="container rounded mt-3">
+      <nav class="navbar navbar-dark bg-primary w-40 rounded">
+        <a class="navbar-brand" href="#">
+          <img src="<%= asset_url('Checklist.jpg') %>" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+          Task manager 1.0
+        </a>
+      </nav>
     <%= yield %>
+    </div>
   </body>
 </html>
